--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -71,7 +71,7 @@ i=\lfloor(T+1)\log_b[\alpha(b-1)+1]\rfloor.
 It can be easily proven that the distribution of $i$ conforms to Equation
 (\ref{eqn:01}).
 
-So protocols \cite{Bahl-02, Culler-01,Zhou-06,Adya-01, Culler-01;
+So protocols \cite{Bahl-02, Culler-01,Zhou-06,Adya-01, Culler-01,
 Tzamaloukas-01, Akyildiz-01} that use RTS/CTS
 controls\footnote{RTS/CTS controls are required to be implemented by
 802.11-compliant devices. They can be used as an optional mechanism
