Added draft option

--- a/acmart.bib
+++ b/acmart.bib
@@ -57,3 +57,9 @@
   note =	 {\url{http://www.ctan.org/pkg/booktabs}}
 }
 
+@Manual{ACMIdentityStandards,
+  title = 	 {{ACM} Visual Identity Standards},
+  organization = {Association for Computing Machinery},
+  year =	 2007
+}
+
