SIGPLAN: adjust margins to match guidelines
See http://sigplan.org/Resources/ProceedingsFormat

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1343,8 +1343,8 @@ Computing Machinery]
 \or % sigplan
    \geometry{twoside=true, head=1pc,
      paperwidth=8.5in, paperheight=11in,
-     includeheadfoot, columnsep=2pc,
-     top=74pt, bottom=70pt, inner=54pt, outer=54pt
+     columnsep=2pc,
+     top=1in, bottom=1in, inner=0.75in, outer=0.75in
      }%
 \or % sigchi
    \geometry{twoside=true, head=1pc,
