SIGPLAN: adjust author format to match guidelines
See http://sigplan.org/Resources/ProceedingsFormat

The author e-mail should be set in a sans serif font, but there is no
\emailfont command available to adjust the formatting of an author
e-mail.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -19,7 +19,7 @@
 % derived file acmart.cls, and
 %
 % \fi
-% \CheckSum{3085}
+% \CheckSum{3093}
 %
 %
 %% \CharacterTable
@@ -2912,6 +2912,8 @@ Computing Machinery]
   \def\@authorfont{\normalsize\normalfont}
   \def\@affiliationfont{\normalsize\normalfont}
 \or % sigplan
+  \def\@authorfont{\Large\normalfont}
+  \def\@affiliationfont{\normalsize\normalfont}
 \or % sigchi
   \def\@authorfont{\bfseries}
   \def\@affiliationfont{\mdseries}
